# pong

./: .gitignore  LICENSE  README.md  build  default.nix  module.nix  pong.cabal  repl
app/: Main.hs
nix/: default.nix  nixpkgs.nix  overlay.nix
src/: Pong.hs
