cabal-version: 2.2
name:
  pong
version:
  0.1
synopsis:
  ping utility
-- description:
homepage:
  https://github.com/chessai/pong
bug-reports:
  https://github.com/chessai/pong/issues
license:
  MIT
license-file:
  LICENSE
author:
  Andrew Martin
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
category:
  Network, Utility
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Pong
  build-depends:
    , base >= 4.12 && < 4.13
    , contiguous >= 0.4 && < 0.5
    , ip >= 1.5 && < 1.6
    , optparse-applicative >= 0.15 && < 0.16
    , ping >= 0.1 && < 0.2
    , primitive >= 0.7 && < 0.8
    , primitive-containers >= 0.4 && < 0.5
    , sockets >= 0.5 && < 0.6
    , text >= 1.2 && < 1.3
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2

executable pong
  main-is:
    Main.hs
  build-depends:
    , base
    , pong
  hs-source-dirs:
    app
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
    -threaded
